Fix user vote multiple times.